@@ -104,7 +104,7 @@ protected:
 	 */
 	MultiPoint(std::vector<Geometry *> *newPoints, const GeometryFactory *newFactory);
 
-	MultiPoint(const MultiPoint &mp): GeometryCollection(mp) {}
+	MultiPoint(const MultiPoint &mp): Geometry(mp), GeometryCollection(mp) {}
 
 	const Coordinate* getCoordinateN(int n) const;
 };
