@@ -29,6 +29,7 @@ namespace geom { // geos::geom
 INLINE 
 MultiPolygon::MultiPolygon(const MultiPolygon &mp)
 	:
+	Geometry(mp),
 	GeometryCollection(mp)
 {
 }
