@@ -35,6 +35,7 @@ namespace geom { // geos::geom
 /*protected*/
 MultiPoint::MultiPoint(vector<Geometry *> *newPoints, const GeometryFactory *factory)
 	:
+	Geometry(factory),
 	GeometryCollection(newPoints,factory)
 {
 }
